force-app/main/default/objects/Long_Article__kav/fields/AED__c.field-meta.xml
<CustomField>
    <fullName>AED__c</fullName>
    <label>AED</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>