force-app/main/default/objects/Long_Article__kav/fields/Attachments__c.field-meta.xml
<CustomField>
    <fullName>Attachments__c</fullName>
    <label>Attachments</label>
    <type>File</type>
</CustomField>