force-app/main/default/objects/Long_Article__kav/fields/Body_2__c.field-meta.xml
<CustomField>
    <fullName>Body_2__c</fullName>
    <label>Body 2</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>