force-app/main/default/objects/Long_Article__kav/fields/Current_Marketing_Codes_and_Promos__c.field-meta.xml
<CustomField>
    <fullName>Current_Marketing_Codes_and_Promos__c</fullName>
    <label>Current Marketing Codes and Promos</label>
    <length>256</length>
    <type>Html</type>
</CustomField>