force-app/main/default/objects/Long_Article__kav/fields/Document_Origin__c.field-meta.xml
<CustomField>
    <fullName>Document_Origin__c</fullName>
    <label>Document Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>TSC</fullName>
            </value>
            <value>
                <fullName>IConnect</fullName>
            </value>
            <value>
                <fullName>Instructor Corner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>