force-app/main/default/objects/Long_Article__kav/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>