force-app/main/default/objects/Long_Article__kav/fields/External_Author__c.field-meta.xml
<CustomField>
    <fullName>External_Author__c</fullName>
    <description>Field to enter a RC External Author</description>
    <label>External Author</label>
    <length>80</length>
    <type>Text</type>
</CustomField>