force-app/main/default/objects/Long_Article__kav/fields/Fact_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Fact_Sheet__c</fullName>
    <label>Fact Sheet</label>
    <type>File</type>
</CustomField>