force-app/main/default/objects/Long_Article__kav/fields/Features_and_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Features_and_Benefits__c</fullName>
    <label>Features and Benefits</label>
    <length>90000</length>
    <type>Html</type>
</CustomField>