force-app/main/default/objects/Long_Article__kav/fields/Generating_Prepaid_Labels_from_FedEx__c.field-meta.xml
<CustomField>
    <fullName>Generating_Prepaid_Labels_from_FedEx__c</fullName>
    <label>Generating Prepaid Labels from FedEx</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>