force-app/main/default/objects/Long_Article__kav/fields/Group_Sales_Referral__c.field-meta.xml
<CustomField>
    <fullName>Group_Sales_Referral__c</fullName>
    <label>Group Sales Referral</label>
    <type>TextArea</type>
</CustomField>