force-app/main/default/objects/Long_Article__kav/fields/Lifeline__c.field-meta.xml
<CustomField>
    <fullName>Lifeline__c</fullName>
    <label>Lifeline</label>
    <type>TextArea</type>
</CustomField>