force-app/main/default/objects/Long_Article__kav/fields/Native_Article__c.field-meta.xml
<CustomField>
    <fullName>Native_Article__c</fullName>
    <label>Native Article</label>
    <length>500</length>
    <type>Html</type>
</CustomField>