force-app/main/default/objects/Long_Article__kav/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <label>Overview</label>
    <length>101000</length>
    <type>Html</type>
</CustomField>