force-app/main/default/objects/Long_Article__kav/fields/Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites__c</fullName>
    <label>Prerequisites</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>