force-app/main/default/objects/Long_Article__kav/fields/Program_Title__c.field-meta.xml
<CustomField>
    <fullName>Program_Title__c</fullName>
    <label>Program Title</label>
    <type>TextArea</type>
</CustomField>