force-app/main/default/objects/Long_Article__kav/fields/Promo_Copy__c.field-meta.xml
<CustomField>
    <fullName>Promo_Copy__c</fullName>
    <label>Promo Copy</label>
    <length>9000</length>
    <type>Html</type>
</CustomField>