force-app/main/default/objects/Long_Article__kav/fields/Promo_Details__c.field-meta.xml
<CustomField>
    <fullName>Promo_Details__c</fullName>
    <label>Promo Details</label>
    <length>28000</length>
    <type>Html</type>
</CustomField>