force-app/main/default/objects/Long_Article__kav/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>