force-app/main/default/objects/Long_Article__kav/fields/Red_Cross_Store__c.field-meta.xml
<CustomField>
    <fullName>Red_Cross_Store__c</fullName>
    <label>Red Cross Store</label>
    <length>255</length>
    <type>Text</type>
</CustomField>