force-app/main/default/objects/Long_Article__kav/fields/Section_10__c.field-meta.xml
<CustomField>
    <fullName>Section_10__c</fullName>
    <label>Section 10</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>