force-app/main/default/objects/Long_Article__kav/fields/Section_11__c.field-meta.xml
<CustomField>
    <fullName>Section_11__c</fullName>
    <label>Section 11</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>