force-app/main/default/objects/Long_Article__kav/fields/Section_1__c.field-meta.xml
<CustomField>
    <fullName>Section_1__c</fullName>
    <label>Section 1</label>
    <length>91000</length>
    <type>Html</type>
</CustomField>