force-app/main/default/objects/Long_Article__kav/fields/Table_of_Contents__c.field-meta.xml
<CustomField>
    <fullName>Table_of_Contents__c</fullName>
    <label>Table of Contents</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>