force-app/main/default/objects/Long_Article__kav/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <label>0-Default (DO NOT USE)</label>
</RecordType>