force-app/main/default/objects/Long_Article__kav/recordTypes/Document_General.recordType-meta.xml
<RecordType>
    <fullName>Document_General</fullName>
    <active>true</active>
    <label>09 - Document | General</label>
</RecordType>