force-app/main/default/objects/Long_Article__kav/recordTypes/Draft.recordType-meta.xml
<RecordType>
    <fullName>Draft</fullName>
    <active>true</active>
    <label>DRAFT (DO NOT USE)</label>
</RecordType>