force-app/main/default/objects/Long_Article__kav/recordTypes/Email.recordType-meta.xml
<RecordType>
    <fullName>Email</fullName>
    <active>true</active>
    <label>11 - Email</label>
</RecordType>