force-app/main/default/objects/Long_Article__kav/recordTypes/Fact_Sheet.recordType-meta.xml
<RecordType>
    <fullName>Fact_Sheet</fullName>
    <active>true</active>
    <label>06 - Fact Sheet</label>
</RecordType>