force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Adding_Discounts_on_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Adding_Discounts_on_Opportunity</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Adding Discounts on Opportunity</label>
</RecordType>