force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_AP_LTP_Agreement_Cancellations_Changes.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_AP_LTP_Agreement_Cancellations_Changes</fullName>
    <active>true</active>
    <label>Job Aid | BGST | AP/LTP Agreement Cancellations/Changes</label>
</RecordType>