force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_AP_LTP_Agreement_Processing.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_AP_LTP_Agreement_Processing</fullName>
    <active>true</active>
    <label>Job Aid | BGST | AP/LTP Agreement Processing</label>
</RecordType>