force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_AP_LTP_Request_to_Delay_Price_Increase.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_AP_LTP_Request_to_Delay_Price_Increase</fullName>
    <active>true</active>
    <label>Job Aid | BGST | AP/LTP Request to Delay Price Increase</label>
</RecordType>