force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Convert_an_AED_Lead_to_an_Account_Contact_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Convert_an_AED_Lead_to_an_Account_Contact_Opportunity</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Convert an AED Lead to an Account/Contact/Opportunity</label>
</RecordType>