force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Convert_FS_AP_LTP_Leads.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Convert_FS_AP_LTP_Leads</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Convert FS/AP/LTP Leads</label>
</RecordType>