force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Create_A_Full_Service_Contract.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Create_A_Full_Service_Contract</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Create a Full Service Contract</label>
</RecordType>