force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Create_a_Lead_AED_Sales.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Create_a_Lead_AED_Sales</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Create a Lead - AED Sales</label>
</RecordType>