force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Create_AP_LTP_Agreements.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Create_AP_LTP_Agreements</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Create AP/LTP Agreements</label>
</RecordType>