force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_EnPro_Program_Management_for_AEDs_Order_Form.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_EnPro_Program_Management_for_AEDs_Order_Form</fullName>
    <active>true</active>
    <label>Job Aid | BGST | EnPro Program Management for AEDs Order Form</label>
</RecordType>