force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Full_Service_Pre_Approval_Process_for_Non_Standard_Courses.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Full_Service_Pre_Approval_Process_for_Non_Standard_Courses</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Full Service Pre-Approval Process for Non-Standard Courses</label>
</RecordType>