force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Invoicing_Requests.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Invoicing_Requests</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Invoicing Requests</label>
</RecordType>