force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Managing_Discounts.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Managing_Discounts</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Managing Discounts</label>
</RecordType>