force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Navigating_in_Lightning.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Navigating_in_Lightning</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Navigating in Lightning</label>
</RecordType>