force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Non_standard_Product_Blanket_Approvals_by_Territory.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Non_standard_Product_Blanket_Approvals_by_Territory</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Non-standard Product Blanket Approvals by Territory</label>
</RecordType>