force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Phillips_AED_Order_Form.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Phillips_AED_Order_Form</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Phillips AED Order Form</label>
</RecordType>