force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Physio_Control_AED_Form.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Physio_Control_AED_Form</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Physio Control AED Form</label>
</RecordType>