force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Qualify_a_Lead.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Qualify_a_Lead</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Qualify a Lead</label>
</RecordType>