force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Qualify_an_AED_Lead.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Qualify_an_AED_Lead</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Qualify an AED Lead</label>
</RecordType>