force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Request_for_W_9_or_Vendor_Forms.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Request_for_W_9_or_Vendor_Forms</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Request for W-9 or Vendor Forms</label>
</RecordType>