force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Return_to_Sales_RTS_Follow_Up_Process.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Return_to_Sales_RTS_Follow_Up_Process</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Return to Sales (RTS) Follow Up Process</label>
</RecordType>