force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_RSG.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_RSG</fullName>
    <active>true</active>
    <label>Job Aid | BGST/RSG</label>
</RecordType>