force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Sales_Admin_Creating_and_Updating_ORGs_in_LMS.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Sales_Admin_Creating_and_Updating_ORGs_in_LMS</fullName>
    <active>true</active>
    <label>Job Aid | BGST Sales Admin | Creating and Updating ORGs in LMS</label>
</RecordType>