force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Sales_Admin_Docusign.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Sales_Admin_Docusign</fullName>
    <active>true</active>
    <label>Job Aid | BGST Sales Admin | Docusign</label>
</RecordType>