force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Sales_Admin_Managing_FS_Agreements.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Sales_Admin_Managing_FS_Agreements</fullName>
    <active>true</active>
    <label>Job Aid | BGST Sales Admin | Managing FS Agreements</label>
</RecordType>