force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Sales_Admin_Revisions_to_Full_Service_Agreements.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Sales_Admin_Revisions_to_Full_Service_Agreements</fullName>
    <active>true</active>
    <label>Job Aid | BGST Sales Admin | Revisions to Full Service Agreements</label>
</RecordType>