force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Sales_Call_Flow.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Sales_Call_Flow</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Sales Call Flow</label>
</RecordType>