force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Searching_Existing_and_Creating_New_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Searching_Existing_and_Creating_New_Contacts</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Searching Existing and Creating New Contacts</label>
</RecordType>