force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Sending_a_Proposal.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Sending_a_Proposal</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Sending a Proposal</label>
</RecordType>