force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_BGST_Zoll_AED_Order_Forms.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_BGST_Zoll_AED_Order_Forms</fullName>
    <active>true</active>
    <label>Job Aid | BGST | Zoll AED Order Forms</label>
</RecordType>