force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_Cancel_a_Products_Order.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_Cancel_a_Products_Order</fullName>
    <active>true</active>
    <label>Job Aid | Cancel a Products Order</label>
</RecordType>