force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_Community_Class_Cash_Check_Money_Order_Payments_for_Registrations.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_Community_Class_Cash_Check_Money_Order_Payments_for_Registrations</fullName>
    <active>true</active>
    <label>Job Aid | Community Class | Cash, Check, Money Order Payments for Registrations</label>
</RecordType>