force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_Community_Offerings_Walk_Ins.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_Community_Offerings_Walk_Ins</fullName>
    <active>true</active>
    <label>Job Aid | Community Offerings | Walk Ins</label>
</RecordType>