force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_Create_and_Edit_a_Contact_in_Salesforce_for_Non_Phone_Agents.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_Create_and_Edit_a_Contact_in_Salesforce_for_Non_Phone_Agents</fullName>
    <active>true</active>
    <label>Job Aid | Create and Edit a Contact in Salesforce for Non-Phone Agents</label>
</RecordType>