force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_CTI_Salesforce_Lightning.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_CTI_Salesforce_Lightning</fullName>
    <active>true</active>
    <label>Job Aid | CTI with Salesforce Lightning</label>
</RecordType>