force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_Handling_Non_Training_and_Certification_Calls_Updated.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_Handling_Non_Training_and_Certification_Calls_Updated</fullName>
    <active>true</active>
    <label>Job Aid | Handling Non-Training and Certification Calls</label>
</RecordType>