force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_iCA_Replacement_Orders.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_iCA_Replacement_Orders</fullName>
    <active>true</active>
    <label>Job Aid | RSG | iCA Replacement Orders</label>
</RecordType>