force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_Long.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_Long</fullName>
    <active>true</active>
    <label>02 - Job Aid | Long</label>
</RecordType>