force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_Prepaid_Shipping_Labels.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_Prepaid_Shipping_Labels</fullName>
    <active>true</active>
    <label>Job Aid | Prepaid Shipping Labels</label>
</RecordType>