force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_Purchase_Orders.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_Purchase_Orders</fullName>
    <active>true</active>
    <label>Job Aid | Purchase Orders</label>
</RecordType>