force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RedCross_org_Business_Manager_Cancel_a_Learner.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RedCross_org_Business_Manager_Cancel_a_Learner</fullName>
    <active>true</active>
    <label>Job Aid | RedCross.org | Business Manager | Cancel a Learner</label>
</RecordType>