force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RSG_Follow_Up_Calls_1.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RSG_Follow_Up_Calls_1</fullName>
    <active>true</active>
    <label>Job Aid | RSG| Follow Up Calls</label>
</RecordType>