force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RSG_Handling_Customer_Credit_Card_Payment_Issues.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RSG_Handling_Customer_Credit_Card_Payment_Issues</fullName>
    <active>true</active>
    <label>Job Aid | RSG | Handling Customer Credit Card Payment Issues</label>
</RecordType>