force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RSG_iCA_Basic_Navigation_and_Zones.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RSG_iCA_Basic_Navigation_and_Zones</fullName>
    <active>true</active>
    <label>Job Aid | RSG | iCA Basic Navigation and Zones</label>
</RecordType>