force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RSG_iCA_Ordering.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RSG_iCA_Ordering</fullName>
    <active>true</active>
    <label>Job Aid | RSG | iCA Ordering</label>
</RecordType>