force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RSG_iCA_Returns.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RSG_iCA_Returns</fullName>
    <active>true</active>
    <label>Job Aid | RSG | iCA Returns</label>
</RecordType>