force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RSG_iCA_WISMO_Where_is_my_Order.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RSG_iCA_WISMO_Where_is_my_Order</fullName>
    <active>true</active>
    <label>Job Aid | RSG | iCA WISMO (Where is my Order?)</label>
</RecordType>