force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RSG_Lightning_Contacts_and_Cases.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RSG_Lightning_Contacts_and_Cases</fullName>
    <active>true</active>
    <label>Job Aid | RSG | Lightning Contacts and Cases</label>
</RecordType>