force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RSG_Order_Cancellations_Complaints_that_arent_returned.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RSG_Order_Cancellations_Complaints_that_arent_returned</fullName>
    <active>true</active>
    <label>Job Aid | RSG | Order Cancellations/Complaints that aren&#39;t Returned</label>
</RecordType>