force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RSG_Orders_from_the_Original_Red_Cross_Store.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RSG_Orders_from_the_Original_Red_Cross_Store</fullName>
    <active>true</active>
    <label>Job Aid | RSG | Orders from the &quot;Original&quot; Red Cross Store</label>
</RecordType>