force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RSG_Request_to_use_Retail_Purchase_Order.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RSG_Request_to_use_Retail_Purchase_Order</fullName>
    <active>true</active>
    <label>Job Aid | RSG | Request to use Retail Purchase Order</label>
</RecordType>