force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RSG_Sales_Admin_FedEx_Alerts_and_Refund_Requests.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RSG_Sales_Admin_FedEx_Alerts_and_Refund_Requests</fullName>
    <active>true</active>
    <label>Job Aid | RSG Sales Admin | FedEx Alerts and Refund Requests</label>
</RecordType>