force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RSG_Sales_Admin_Process_for_PO_Retail_Orders.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RSG_Sales_Admin_Process_for_PO_Retail_Orders</fullName>
    <active>true</active>
    <label>Job Aid | RSG Sales Admin | Process for PO Retail Orders</label>
</RecordType>