force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_RSG_Salesforce_Lightning_Navigation.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_RSG_Salesforce_Lightning_Navigation</fullName>
    <active>true</active>
    <label>Job Aid | RSG | Salesforce Lightning Navigation</label>
</RecordType>