force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_Sales_Requests_for_Group_Training_AED_Sales.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_Sales_Requests_for_Group_Training_AED_Sales</fullName>
    <active>true</active>
    <label>Job Aid | Sales - Requests for Group Training/ AED Sales</label>
</RecordType>