force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_Search_and_Register_for_a_Course_from_Salesforce_in_Learning_Center.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_Search_and_Register_for_a_Course_from_Salesforce_in_Learning_Center</fullName>
    <active>true</active>
    <label>Job Aid | Search and Register for a Course from Salesforce in Learning Center</label>
</RecordType>