force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_Searching_in_LMS.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_Searching_in_LMS</fullName>
    <active>true</active>
    <label>Job Aid | Searching in LMS</label>
</RecordType>