force-app/main/default/objects/Long_Article__kav/recordTypes/Job_Aid_Short.recordType-meta.xml
<RecordType>
    <fullName>Job_Aid_Short</fullName>
    <active>true</active>
    <label>01 - Job Aid | Short</label>
</RecordType>