force-app/main/default/objects/Long_Article__kav/recordTypes/Linked_Document.recordType-meta.xml
<RecordType>
    <fullName>Linked_Document</fullName>
    <active>true</active>
    <label>12 - Linked Document</label>
</RecordType>