force-app/main/default/objects/Long_Article__kav/recordTypes/Marketing_Promotion.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Promotion</fullName>
    <active>true</active>
    <label>07 - Marketing/Promotion</label>
</RecordType>