force-app/main/default/objects/Long_Article__kav/recordTypes/Mobile_Application.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Application</fullName>
    <active>true</active>
    <label>08 - Mobile Application</label>
</RecordType>