force-app/main/default/objects/Long_Article__kav/recordTypes/Program.recordType-meta.xml
<RecordType>
    <fullName>Program</fullName>
    <active>true</active>
    <label>05 - Program</label>
</RecordType>