force-app/main/default/objects/Long_Article__kav/recordTypes/Program_Document.recordType-meta.xml
<RecordType>
    <fullName>Program_Document</fullName>
    <active>true</active>
    <label>10 - Program Document</label>
</RecordType>