force-app/main/default/objects/Long_Article__kav/recordTypes/Program_Safety_Training_for_Swim_Coaches.recordType-meta.xml
<RecordType>
    <fullName>Program_Safety_Training_for_Swim_Coaches</fullName>
    <active>true</active>
    <label>Program | Safety Training for Swim Coaches</label>
</RecordType>