force-app/main/default/objects/Long_Article__kav/recordTypes/Tool_AP_LTP_Price_Increase_Talking_Points_FAQs.recordType-meta.xml
<RecordType>
    <fullName>Tool_AP_LTP_Price_Increase_Talking_Points_FAQs</fullName>
    <active>true</active>
    <label>Tool | AP/LTP Price Increase Talking Points &amp; FAQs</label>
</RecordType>