force-app/main/default/objects/Long_Article__kav/recordTypes/Tool_BGST_AED_State_Specific_Requirements.recordType-meta.xml
<RecordType>
    <fullName>Tool_BGST_AED_State_Specific_Requirements</fullName>
    <active>true</active>
    <label>Tool | BGST | AED State-Specific Requirements</label>
</RecordType>