force-app/main/default/objects/Long_Article__kav/recordTypes/Tool_BGST_Aquatics_Terminology_FAQs_and_Frequent_Links.recordType-meta.xml
<RecordType>
    <fullName>Tool_BGST_Aquatics_Terminology_FAQs_and_Frequent_Links</fullName>
    <active>true</active>
    <label>Tool | BGST | Aquatics Terminology, FAQs, and Frequent Links</label>
</RecordType>