force-app/main/default/objects/Long_Article__kav/recordTypes/Tool_BGST_Physio_Price_List.recordType-meta.xml
<RecordType>
    <fullName>Tool_BGST_Physio_Price_List</fullName>
    <active>true</active>
    <label>Tool | BGST | Physio Price List</label>
</RecordType>