force-app/main/default/objects/Long_Article__kav/recordTypes/Tool_BGST_Split_Class_Policies.recordType-meta.xml
<RecordType>
    <fullName>Tool_BGST_Split_Class_Policies</fullName>
    <active>true</active>
    <label>Tool | BGST | Split Class Policies</label>
</RecordType>