force-app/main/default/objects/Long_Article__kav/recordTypes/Tool_Course_Codes.recordType-meta.xml
<RecordType>
    <fullName>Tool_Course_Codes</fullName>
    <active>true</active>
    <label>Tool | Course Codes</label>
</RecordType>