force-app/main/default/objects/Long_Article__kav/recordTypes/Tool_Disaster_Alerts.recordType-meta.xml
<RecordType>
    <fullName>Tool_Disaster_Alerts</fullName>
    <active>true</active>
    <label>Tool | ARC | Disaster Alerts</label>
</RecordType>