force-app/main/default/objects/Long_Article__kav/recordTypes/Tool_Long.recordType-meta.xml
<RecordType>
    <fullName>Tool_Long</fullName>
    <active>true</active>
    <label>04 - Tool | Long</label>
</RecordType>