force-app/main/default/objects/Long_Article__kav/recordTypes/Tool_Sales_Case_Closed_Reasons.recordType-meta.xml
<RecordType>
    <fullName>Tool_Sales_Case_Closed_Reasons</fullName>
    <active>true</active>
    <label>Tool | Sales Case Closed Reasons</label>
</RecordType>