force-app/main/default/objects/Long_Article__kav/recordTypes/Tool_Service_Case_Types.recordType-meta.xml
<RecordType>
    <fullName>Tool_Service_Case_Types</fullName>
    <active>true</active>
    <label>Tool | Service Case Types</label>
</RecordType>