force-app/main/default/objects/Long_Article__kav/recordTypes/Tool_Short.recordType-meta.xml
<RecordType>
    <fullName>Tool_Short</fullName>
    <active>true</active>
    <label>03 - Tool | Short</label>
</RecordType>